force-app/main/default/objects/WSM_Generated_Document__c/WSM_Generated_Document__c.object-meta.xml
<CustomObject>
    <label>WSM Generated Document</label>
    <nameField>
        <displayFormat>WSMDoc-{000000000}</displayFormat>
        <label>WSM Generated Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WSM Generated Document</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>