force-app/main/default/objects/WSM_Generated_Document__c/fields/Body1__c.field-meta.xml
<CustomField>
    <fullName>Body1__c</fullName>
    <label>Body1</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>