force-app/main/default/objects/WSM_Generated_Document__c/fields/CSS_Input__c.field-meta.xml
<CustomField>
    <fullName>CSS_Input__c</fullName>
    <description>Custom CSS generated from Doc Gen Tool</description>
    <inlineHelpText>Custom CSS generated from Doc Gen Tool</inlineHelpText>
    <label>CSS Input</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>