force-app/main/default/objects/WSM_Generated_Document__c/fields/Parent_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object_Id__c</fullName>
    <label>Parent Object Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>