force-app/main/default/objects/WSM_Generated_Document__c/fields/WSM_Document_Template__c.field-meta.xml
<CustomField>
    <fullName>WSM_Document_Template__c</fullName>
    <label>WSM Document Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>